# atom_level_smiles_transformer

./: .gitignore  README.md  build.sh  environment.yml  logger.py  main.py  model.py  optimizer.py  pyproject.toml  trainer.py
chemformer_rs/: Cargo.toml  build.sh
chemformer_rs/src/: database.rs  lib.rs  tokenizer.rs
config/: model.yaml  train_config.yaml  vocab.yaml
config/model/: base_paper.yaml  deberta_encoder.yaml  laptop.yaml  medium.yaml  medium_gate.yaml  medium_submersion.yaml  original.yaml
config/task/: finetune_uspto_sep.yaml  pretrain_zinc.yaml
dataset/: uspto_sep.py  utils.py  zinc.py
kernel/: config.py  rms_norm.py  rope.py  swiglu.py
model/: __init__.py  attention.py  bart.py  block.py  config.py  decoder.py  encoder.py  feed_forward.py  norm.py  projection.py  utils.py
rocksdb_databases/vocab_chembl/: IDENTITY  LOG  MANIFEST-000005  vocab_metadata.json
rocksdb_databases/vocab_pubchem_subset/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007  vocab_metadata.json
rocksdb_databases/vocab_unified_all_datasets/: IDENTITY  LOG  MANIFEST-000005  vocab_metadata.json
rocksdb_databases/vocab_uspto/: IDENTITY  LOG  MANIFEST-000005  vocab_metadata.json
rocksdb_databases/vocab_zinc/: IDENTITY  LOG  MANIFEST-000005  vocab_metadata.json
scripts/: bench.py  bench_model.py  build_chemistry_datasets.py  convert_vocab.py  manage_lmdb_archive.py  test_nan.py  train_local.sh  train_slurm.py  train_slurm.sh  uspto_pickle_to_lmdb.py  zinc_csv_to_lmdb.py
smiles_tokenizer/: Cargo.toml  build.sh
smiles_tokenizer/src/: lib.rs
tests/: bench_smiles_augmentation.py  test_database.py  test_tokenizer.py  test_tokenizer_dataset.py
