[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "chemformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[tool.maturin]
manifest-path = "smiles_tokenizer/Cargo.toml"
features = ["pyo3/extension-module"]
