[package]
name = "chemformer_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "auto-initialize"] }
regex = "1.10"
lazy_static = "1.4"
rayon = "1.8"
ahash = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # For JSON serialization
bincode = "1.3"
dashmap = "5.5"
num_cpus = "1.16"
chrono = "0.4"  # For timestamps
lmdb-rs = "0.7.6"
parking_lot = "0.12.5"
rocksdb = "0.24.0"
lazy-regex = { version = "3.4.2", features = ["perf"] }

[lib]
name = "chemformer_rs"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
